# mindeye

./: .gitignore  CHEAT.md  Makefile  README.md  cold_start.sh  config_infer.yaml  deploy_epoc.sh  eval_16a.txt  eval_16b.txt  eval_16c.txt  eval_p15.txt  logs_16a.txt  logs_16b.txt  logs_16c.txt  logs_phase16_all.txt  logs_phase16_eval.txt  logs_phase16_eval_remaining.txt  pyproject.toml  requirements.txt  restart_epoc.sh  restart_matrix.sh  run_epoc_simulation.sh  run_phase16_ablations.sh  verify_config.py  verify_extractor.py  verify_params.py
docs/: CHEAT.md  HANDOVER.md  INFRA.md  PHASE3_5_BACKALIGNED_SUMMARY.md  PHASE3_5_FULL5S_SUMMARY.md  PLAN.md  QFORMER_PIPELINE_REVIEW.md  README.md  RunPod_SKILL.md  SPRINT2_ZUNA_TIGHT1S_RECOVERY_ANALYSIS.md  VLM_ATTRIBUTES.md
scratch/: analyze_matrix_results.py  run_matrix_bc.sh  sweep_knn_params.sh  test_adapters.py  test_component_load.py  test_device_map.py  test_pipeline_load.py
scripts/: README.md  add_rae_transforms.py  analyze_vlm_attributes.py  audit_geometry.py  audit_zuna_timing.py  auto_train_phase15.sh  build_common_embeddings.py  build_decode_common_embeddings.py  build_rae_bottleneck_codes.py  build_rae_code_stats.py  build_rae_latent_bank.py  build_retrieval_index.py  cache_zuna_latents.py  combine_image_embeddings.py  demo_diffusion.py  diagnose_zuna_latents.py  download_nod.py  download_nod_chunks.py  download_nod_s3.py  eeg_class_probe.py  embed_calibration_stimuli.py  eval_probe_sanity.py  evaluate_clip_native_decoder.py  evaluate_common_qwen_adapter.py  evaluate_eeg_qwen_generation.py  grid_arms_sub01.sh  (+55 more)
(+67 files in other folders)
