[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mindseye"
version = "0.1.0"
description = "ZUNA-first EEG to semantic image generation"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.1.0",
    "torchvision",
    "torchaudio",
    "mne",
    "mne-bids",
    "transformers",
    "diffusers",
    "pandas",
    "pyarrow",
    "numpy",
    "scipy",
    "accelerate",
    "pillow",
    "huggingface_hub",
    "requests",
    "openneuro-py",
    "zuna",
]
